# particle-filter-ros

./: .gitignore  .gitmodules  README.md
prolab_ws/src/hamboeck/: CMakeLists.txt  package.xml
prolab_ws/src/hamboeck/backup_map/: mymap.pgm
prolab_ws/src/hamboeck/include/localizationHandler/: localizationHandler.h
prolab_ws/src/hamboeck/include/localizationNode/: localizationNode.h
prolab_ws/src/hamboeck/include/map/: map.h
prolab_ws/src/hamboeck/include/motionModel/: motionModel.h
prolab_ws/src/hamboeck/include/occupancyGrid/: occupancyGrid.h
prolab_ws/src/hamboeck/include/particle/: particle.h
prolab_ws/src/hamboeck/include/particleFilter/: particle.h  particleFilter.h
prolab_ws/src/hamboeck/include/sensorModel/: sensorModel.h
prolab_ws/src/hamboeck/include/utils/: utils.h
prolab_ws/src/hamboeck/launch/: turtlebot3_playground.launch
prolab_ws/src/hamboeck/maps/: mymap.yaml  mymap_edited.pgm  mymap_edited.yaml  newmap_finished.yaml
prolab_ws/src/hamboeck/param/: params.yaml
prolab_ws/src/hamboeck/rviz/: config.rviz
prolab_ws/src/hamboeck/scripts/: plots.py
prolab_ws/src/hamboeck/src/: main.cpp
prolab_ws/src/hamboeck/src/localizationNode/: localizationNode.cpp
prolab_ws/src/hamboeck/src/mcl/: mcl.cpp
prolab_ws/src/hamboeck/src/occupancyGrid/: occupancyGrid.cpp
prolab_ws/src/hamboeck/src/particleFilter/: particle.cpp
prolab_ws/src/hamboeck/src/publish_poses/: publish_poses.cpp
prolab_ws/src/hamboeck/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
prolab_ws/src/hamboeck/worlds/: playground.world
(+4 files in other folders)
